--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -2,7 +2,11 @@
     display: flex;
     justify-content: center;
     gap: 10px;
-    padding-bottom: 30px;
+    padding-bottom: 24px;
+
+    @media screen and (min-width: 1200px) {
+        padding-bottom: 30px;
+    }
 }
 
 .socials-list__link {
