--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     padding: 0;
-    min-width: 200px;
+    width: 200px;
     height: 50px;
 
     font-weight: 700;
@@ -29,6 +29,7 @@
     position: absolute;
     top: 8px;
     right: 8px;
+    padding: 0;
 
     display: flex;
     align-items: center;
