--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,22 @@
 .container {
-    width: 1200px;
     margin-right: auto;
     margin-left: auto;
     padding-right: 15px;
     padding-left: 15px;
+    min-width: 320px;
+
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 768px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+    }
+    
+    outline: 1px solid blue;
+    outline-offset: -1px solid blue;
 }
