--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,8 +1,8 @@
 .logo {
     font-family: var(--socondary-font);
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     color: var(--accent-clr);
 
@@ -12,5 +12,10 @@
 
     &--light-color {
         color: var(--light-txt-clr);
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 26px;
+        line-height: 1.19;
     }
 }
