--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,4 +1,12 @@
 .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    outline: 1px solid red;
+    outline-offset: -1px solid red;
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
