--- a/sass/layout/_backdrop.scss
+++ b/sass/layout/_backdrop.scss
@@ -25,8 +25,8 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
 
-    width: 528px;
-    height: 581px;
+    width: 100%;
+    height: 609px;
 
     background-color: var(--main-bg-clr);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -34,6 +34,16 @@
 
     opacity: 1;
     transition: transform var(--animation), opacity var(--animation);
+
+    @media screen and (min-width: 480px) and (max-width: 1200px) {
+        width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 521px;
+        height: 581px;
+    }
+
 }
 
 .backdrop--is-hidden .modal {
