--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,16 +1,11 @@
-.clients-section__title {
-    margin-bottom: 50px;
-}
-
 .clients-list {
-    display: flex;
-    gap: 30px;
-
+    justify-content: center;
+    
     &__link {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 170px;
+        width: 210px;
         height: 92px;
 
         color: var(--main-icon-clr);
@@ -19,6 +14,14 @@
         border-radius: 4px;
 
         transition: color var(--animation), border var(--animation);
+
+        @media screen and (min-width: 768px) {
+            width: 226px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: 170px;
+        }
     }
 
     &__link:hover,
