--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    position: relative;
     border-bottom: 1px solid #ECECEC;
 
     &__container {
@@ -7,31 +8,88 @@
     }
 
     &__logo {
-        margin-right: 93px;
+        margin-right: auto;
+
+        @media screen and (min-width: 768px) {
+            margin-right: 87px;
+        }
+
+        @media screen and (min-width: 1200px) {
+           margin-right: 91px; 
+        }
+        
+    }
+
+    &__menu-button {
+        display: block;
+        padding: 0;
+
+        color: #000;
+        background-color: var(--main-bg-clr);
+
+        border: none;
+
+        transition: color var(--animation);
+    }
+
+    &__menu-button:hover,
+    &__menu-button:focus {
+        color: var(--accent-clr);
+    }
+
+    &__menu-icon {
+        display: block;
+        margin: 10px 0;
+
+        fill: currentColor;
+        cursor: pointer;
+
+        @media screen and (min-width: 768px) {
+            display: none;
+        }
     }
 }
 
 .contacts {
-    display: flex;
-    align-items: center;
+    display: none;
+    
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+    }
+
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+    }
 
     &__item:not(:last-child) {
-        margin-right: 30px;
+        margin-bottom: 10px;
+
+        @media screen and (min-width: 1200px) {
+            margin-right: 30px;
+            margin-bottom: 0px;
+        }
     }
 
     &__link {
         display: flex;
         align-items: center;
-        padding-top: 32px;
-        padding-bottom: 32px;
 
         font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
+        font-size: 12px;
+        line-height: 1.17;
         letter-spacing: 0.02em;
         color: var(--secondary-txt-clr);
 
         transition: color var(--animation);
+
+        @media screen and (min-width: 1200px) {
+            padding-top: 32px;
+            padding-bottom: 32px;
+        
+            font-size: 14px;
+            line-height: 1.14;
+        }
     }
 
     &__link:hover,
