--- a/sass/layout/_request-form.scss
+++ b/sass/layout/_request-form.scss
@@ -24,15 +24,23 @@
     }
 
     &__input {
-        width: 448px;
+        padding: 11px 42px;
+        width: 100%;
         height: 40px;
-        padding: 12px 42px;
 
         border: 1px solid rgba(33, 33, 33, 0.2);
         border-radius: 4px;
         outline: transparent;
 
         transition: border-color var(--animation);
+
+        @media screen and (min-width: 480px) and (max-width: 1200px) {
+            width: 370px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: 448px;
+        }
     }
 
     &__input:hover,
@@ -66,15 +74,23 @@
     }
 
     &__input--comment {
-        width: 448px;
-        height: 120px;
         padding: 12px 16px;
 
         font-size: 12px;
         line-height: 1.67;
         letter-spacing: 0.01em;
 
+        width: 100%;
+        height: 120px;
         resize: none;
+
+        @media screen and (min-width: 480px) and (max-width: 1200px) {
+            width: 370px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            width: 448px;
+        }
     }
 
     &__input--comment::placeholder {
@@ -89,7 +105,6 @@
 .agreement-checkbox {
     display: flex;
     justify-content: center;
-    align-items: center;
     margin-bottom: 30px;
 
     &__icon {
@@ -113,24 +128,29 @@
 
     &__text,
     &__link {
-        font-size: 14px;
-        line-height: 1.71;
+        font-size: 12px;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         color: var(--secondary-txt-clr);
         user-select: none;
+
+        @media screen and (min-width: 1200px) {
+            font-size: 14px;
+            line-height: 1.71;  
+        }
+        
     }
 
     &__link {
         color: var(--accent-clr);
         text-underline-position: under;
 
-        transition: color var(--animation), border-color var(--animation);
+        transition: color var(--animation);
     }
 
     &__link:hover,
     &__link:focus {
         color: var(--sec-acc-clr);
-        border-color: var(--sec-acc-clr);
     }
 }
 
