--- a/sass/layout/_subscribe.scss
+++ b/sass/layout/_subscribe.scss
@@ -1,16 +1,24 @@
 .subscribe {
     padding-top: 12px;
 
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+        padding-top: 0px;
+    }
+
     &__wrap {
-        display: flex;
+        @media screen and (min-width: 1200px) {
+           display: flex; 
+        }
     }
 
     &__input {
-        display: inline-block;
-        width: 358px;
-        height: 50px;
-        margin-right: 10px;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 20px;
         padding: 15px 16px;
+        width: 100%;
+        height: 50px;
 
         color: var(--light-txt-clr);
         background-color: transparent;
@@ -19,6 +27,16 @@
         border-radius: 4px;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         outline: transparent;
+
+        @media screen and (min-width: 480px) and (max-width: 1200px) {
+            width: 450px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: 358px;
+            margin-right: 10px;
+            margin-bottom: 0px;
+        }
     }
 
     &__input::placeholder {
@@ -29,6 +47,8 @@
 
     &__btn {
         position: relative;
+        margin-right: auto;
+        margin-left: auto;
     }
 
     &__desc {
