--- a/css/main.css
+++ b/css/main.css
@@ -579,7 +579,7 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  min-height: 796px;
+  height: 100vh;
   background-color: var(--main-bg-clr);
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
