--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
 
     width: 100%;
-    min-height: 796px;
+    height: 100vh;
     background-color: var(--main-bg-clr);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 
