--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -19,7 +19,7 @@
     transition: transform var(--animation), opacity var(--animation);
 
     @media screen and (min-width: 480px) and (max-width: 767px) {
-        width: 480px;
+        width: 100vw;
     }
 
     @media screen and (min-width: 768px) {
