--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,7 +1,8 @@
 .radio-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
+    gap: 8px;
     margin-bottom: 40px;
 
     @media screen and (min-width: 768px) {
@@ -10,10 +11,6 @@
 
     @media screen and (min-width: 1200px) {
         margin-bottom: 50px;
-    }
-
-    &__item:not(:last-child) {
-        margin-right: 8px;
     }
 }
 
