--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -7,6 +7,7 @@
 
     @media screen and (min-width: 768px) {
         margin-bottom: 30px;
+        justify-content: center;
     }
 
     @media screen and (min-width: 1200px) {
